# weak-bindgen

./: .clang-tidy  CMakeLists.txt  conanfile.py
cmake/: AddCompileOptionIfSupported.cmake  weak-bindgen-config.cmake.in
src/: CMakeLists.txt  CXXCodeGen.cpp  CXXCodeGen.hpp  CodeGen.hpp  FunctionDeclarationReplacer.cpp  FunctionDeclarationReplacer.hpp  include_paths.hpp.in  main.cpp
test/: CMakeLists.txt  empty_struct.hpp  extern_c.hpp  header.hpp  lit.cfg.in  namespace.hpp  noexcept.hpp  pointers.hpp  varargs.hpp
test_package/: CMakeLists.txt  conanfile.py
